--- a/05-custom/remake.yml
+++ b/05-custom/remake.yml
@@ -12,13 +12,22 @@ targets:
     command: fry(chopped_meat, with = I(c("oil", "pepper")))
 
   chopped_meat:
-    command: chop("raw_meat.txt")
+    command: chop(raw_meat)
 
   peeled_carrots:
-    command: peel("raw_carrots.txt")
+    command: peel(raw_carrots)
 
   peeled_potatoes:
-    command: peel("raw_potatoes.txt")
+    command: peel(raw_potatoes)
 
   cooked_potatoes:
     command: cook(peeled_potatoes)
+
+  raw_meat:
+    command: buy(I("meat"), from = I("the butcher's"))
+
+  raw_carrots:
+    command: buy(I("carrots"))
+
+  raw_potatoes:
+    command: buy(I("potatoes"))
